bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_state_max_not_one.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(input = JsonValueInput, state_max_cardinality = 2)]
#[batpak(event = Ev, handler = on_ev)]
struct P {
    a: u8,
}
fn main() {}
